Tidying up indentations